Fix z-index issue and scrolling issue in modal dialog

--- a/vanilla-js/assets/our-members-modal.css
+++ b/vanilla-js/assets/our-members-modal.css
@@ -8,7 +8,7 @@
 	left: 0;
 	right: 0;
 	bottom: 0;
-	z-index: 1000;
+	z-index: 10000;
 	opacity: 0;
 	transition: opacity .15s;
 	font-size: 16px;
